--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      Decimal to Binary <br />
+      Booboo to Poopoo <br />
       Converter
     </h1>
     <section class="input-container">
