--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <h1>
-      Booboo to Poopoo <br />
-      Converter
+      Booboo to Poopoo &#128169 <br />
+      &#128526 Converter
     </h1>
     <section class="input-container">
       <label for="number-input">Enter a decimal number:</label>
