--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      Booboo to Poopoo &#128169 <br />
+      Booboo ka Poopoo &#128169 <br />
       &#128526 Converter
     </h1>
     <section class="input-container">
