--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>
       Booboo ka Poopoo &#128169 <br />
-      &#128526 Converter
+      &#128526 Converter &#128526
     </h1>
     <section class="input-container">
       <label for="number-input">Enter a decimal number:</label>
