--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decimal to Binary Converter</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <h1>
-      Booboo ka Poopoo &#128169 <br />
-      &#128526 Converter &#128526
-    </h1>
-    <section class="input-container">
-      <label for="number-input">Enter a decimal number:</label>
-      <input
-        value=""
-        type="number"
-        name="decimal number input"
-        id="number-input"
-        class="number-input"
-      />
-      <button class="convert-btn" id="convert-btn">Convert</button>
-    </section>
-    <section class="output-container">
-      <output id="result" for="number-input"></output>
-      <h2>Call stack</h2>
-      <div id="animation-container"></div>
-    </section>
-    <script src="script.js"></script>
-  </body>
-</html>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Decimal to Binary Converter</title>
+      <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+      <h1>
+        Booboo ka Poopoo &#128169 <br />
+        &#128526 Converter &#128526
+      </h1>
+      <section class="input-container">
+        <label for="number-input">Enter a decimal number:</label>
+        <input
+          value=""
+          type="number"
+          name="decimal number input"
+          id="number-input"
+          class="number-input"
+        />
+        <button class="convert-btn" id="convert-btn">Convert</button>
+      </section>
+      <section class="output-container">
+        <output id="result" for="number-input"></output>
+        <h2>Call stack</h2>
+        <div id="animation-container"><span style='font-size:100px;'>&#128169 💨;</span></div>
+      </section>
+      <script src="script.js"></script>
+    </body>
+  </html>
