--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         &#128526 Converter &#128526
       </h1>
       <section class="input-container">
-        <label for="number-input">Enter a decimal number:</label>
+        <label for="number-input">Enter your pupu 💨:</label>
         <input
           value=""
           type="number"
