--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="output-container">
         <output id="result" for="number-input"></output>
         <h2>Call stack</h2>
-        <div id="animation-container"><span style='font-size:100px;'>&#128169 💨;</span></div>
+        <div id="animation-container"><span style='font-size:100px;'>&#128169 💨</span></div>
       </section>
       <script src="script.js"></script>
     </body>
